@@ -1,3 +1,8 @@
+2006-05-27 Borut Razem <borut.razem AT siol.net>
+
+	* support/regression/fwk/lib/testfwk.c: increase stack size
+	  from deafult 64 bytes to 128 bytes
+
 2006-05-28 Vangelis Rokas <vrokas AT users.sourceforge.net>
 
 	* src/pic16/gen.c (genFunction, genEndFunction): some
